[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.4",
    "numpy>=2.2.3",
    "openai>=1.65.4",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
    "sift-stack-py>=0.4.2",
    "streamlit>=1.43.0",
]
