[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.4",
    "numpy>=2.2.3",
    "openai>=1.65.4",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
    "pyzbar>=0.1.9",
    "requests>=2.32.3",
    "sift-stack-py>=0.4.2",
    "streamlit-authenticator>=0.4.3",
    "streamlit>=1.43.0",
    "extra-streamlit-components>=0.1.71",
    "python-dotenv>=1.0.1",
    "twilio>=9.4.6",
    "pyyaml>=6.0.2",
    "streamlit-login-auth-ui>=0.2.0",
    "trycourier>=6.2.1",
]
